<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSwitchTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextDelayInMilliseconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructions"
        tools:text="0.000" />

    <RadioGroup
        android:id="@+id/radioGroupTimerImplementation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checkedButton="@id/radioButtonJavaTimer"
        app:layout_constraintBottom_toTopOf="@+id/buttonSwitchTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewTimerImplementationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_implementation_header" />

        <RadioButton
            android:id="@+id/radioButtonJavaTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/implementation_java_timer"
            tools:layout_editor_absoluteX="-23dp"
            tools:layout_editor_absoluteY="264dp" />

        <RadioButton
            android:id="@+id/radioButtonHandlerTimerWithRunnables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/implementation_handler_timer_runnables" />

        <RadioButton
            android:id="@+id/radioButtonHandlerTimerWithMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/implementation_handler_timer_messages" />

        <RadioButton
            android:id="@+id/radioButtonLoopTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/implementation_loop_timer" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextDelayInMilliseconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_delay_in_milliseconds"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimerImplementation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>